# declaredvolatile

./: .gitignore  AsciiArt.hs  LICENSE.txt  Makefile  Rot13.hs  declaredvolatile.cabal  declaredvolatile.hs  index.hs  index.html  shake  sine.txt  site.hs  site.html  stack.yaml  style.css
DeclaredVolatile/: BlogPost.hs  Date.hs  Html.hs  Layout.hs  Pixyll.hs  Rot13.hs
DeclaredVolatile/Logo/: AsciiArt.hs
blog/: 2014-04-24-cont-monad-with-error-handling-in-c++.md  2014-09-08-building-tahoe-lafs-on-mac-osx-10.8.5.md  2014-09-14-writing-a-simple-blog-with-shake-and-pandoc.md  2015-01-13-how-to-keep-android-file-transfer-from-opening.md
css/: declaredvolatile.css  pandoc-solarized.css  pixyll.css  styles.css
fay/: logo.hs  logo.html
