name:                declaredvolatile
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            http://declaredvolatile.org
license:             BSD3
license-file:        LICENSE.txt
author:              Stefan Kersten
maintainer:          kaoskorobase@gmail.com
copyright:           (c) 2014 Stefan Kersten
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable declaredvolatile
  main-is:             declaredvolatile.hs
  other-modules:       DeclaredVolatile.Date
                       DeclaredVolatile.Html
                       DeclaredVolatile.Layout
                       DeclaredVolatile.Logo.AsciiArt
                       DeclaredVolatile.Pixyll
                       DeclaredVolatile.Rot13
  other-extensions:    OverloadedStrings, EmptyDataDecls, NoImplicitPrelude
  build-depends:       base >=4.7 && <4.8,
                       blaze-markup >=0.6 && <0.7,
                       blaze-html >=0.7 && <0.8,
                       feed,
                       iso8601-time,
                       old-locale,
                       pandoc,
                       shake >= 0.13,
                       shakespeare >= 2.0,
                       split,
                       text >= 1.1,
                       time,
                       xml
  -- hs-source-dirs:      
  default-language:    Haskell2010
